# sdcard

./: .gitignore  README.md  keys.py  pyproject.toml  requirement.txt  sdcard
sdcard/: __main__.py
